--- a/GroceryStoreManager/GroceryStore.WinUI/GroceryStore.WinUI/GroceryStore.WinUI.csproj
+++ b/GroceryStoreManager/GroceryStore.WinUI/GroceryStore.WinUI/GroceryStore.WinUI.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DevExpress.WinUI" Version="23.1.7-pre-23316" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
     <Manifest Include="$(ApplicationManifest)" />
