--- a/GroceryStoreManager/Test_ConsoleApp/Test_ConsoleApp/Test_ConsoleApp.csproj
+++ b/GroceryStoreManager/Test_ConsoleApp/Test_ConsoleApp/Test_ConsoleApp.csproj
@@ -8,9 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\DynamicPluginSupport\DynamicPluginSupport.csproj" />
     <ProjectReference Include="..\..\GroceryStore.Data.EntityFramework\GroceryStore.Data.EntityFramework.csproj" />
     <ProjectReference Include="..\..\GroceryStore.Domain\GroceryStore.Domain.csproj" />
-    <ProjectReference Include="..\..\GroceryStore.WinUI\GroceryStore.WinUI (Package)\GroceryStore.WinUI (Package).wapproj" />
+    <ProjectReference Include="..\..\Temporary_Appendix\Temporary_Appendix.csproj" />
   </ItemGroup>
 
 </Project>
