--- a/GroceryStoreManager/GroceryStore.MainApp/GroceryStore.MainApp.csproj
+++ b/GroceryStoreManager/GroceryStore.MainApp/GroceryStore.MainApp.csproj
@@ -18,13 +18,20 @@
     <Compile Remove="_legacy\WindowPopupService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="ControlHelper\BlankPage.xaml" />
     <None Remove="Converters\Converters.xaml" />
     <None Remove="CustomControls\ContentDialogBase.xaml" />
     <None Remove="CustomControls\Separator.xaml" />
     <None Remove="Styles\Controls.xaml" />
+    <None Remove="Views\BlankPage.xaml" />
     <None Remove="Views\PopupView\ContentDialogBase.xaml" />
+    <None Remove="Views\PopupView\CustomerPopup.xaml" />
+    <None Remove="Views\PopupView\LoginPopup.xaml" />
     <None Remove="Views\PopupView\OrderPopup.xaml" />
+    <None Remove="Views\PopupView\ProductPopup.xaml" />
+    <None Remove="Views\PopupView\WarningPopup.xaml" />
     <None Remove="Views\SubView\DetailOrderPage.xaml" />
+    <None Remove="Views\SubView\DetailProductPage.xaml" />
     <None Remove="_legacy\ASB_Ver1.txt" />
   </ItemGroup>
   <ItemGroup>
@@ -40,18 +47,24 @@
     <PackageReference Include="CommunityToolkit.WinUI.UI.Controls" Version="7.1.2" />
     <PackageReference Include="CommunityToolkit.WinUI.UI.Controls.DataGrid" Version="7.1.2" />
     <PackageReference Include="DevExpress.WinUI" Version="23.1.7-pre-23337" />
+    <PackageReference Include="GraphQL.Client" Version="6.0.2" />
+    <PackageReference Include="GraphQL.Client.Abstractions" Version="6.0.2" />
+    <PackageReference Include="GraphQL.Client.Serializer.Newtonsoft" Version="6.0.2" />
+    <PackageReference Include="GraphQL.Client.Serializer.SystemTextJson" Version="6.0.2" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.14" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231008000" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="2.0.9" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Syncfusion.Editors.WinUI" Version="23.2.7" />
     <PackageReference Include="WinUIEx" Version="2.3.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DynamicPluginSupport\DynamicPluginSupport.csproj" />
+    <ProjectReference Include="..\GroceryStore.Data.EntityFramework\GroceryStore.Data.EntityFramework.csproj" />
     <ProjectReference Include="..\GroceryStore.Domain\GroceryStore.Domain.csproj" />
     <ProjectReference Include="..\GroceryStore.MainApp.Core\GroceryStore.MainApp.Core.csproj" />
   </ItemGroup>
@@ -59,6 +72,27 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="Views\BlankPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="ControlHelper\BlankPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Views\PopupView\LoginPopup.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Views\PopupView\CustomerPopup.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Views\PopupView\WarningPopup.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Views\PopupView\ProductPopup.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Views\SubView\DetailProductPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="Views\SubView\DetailOrderPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
