--- a/GroceryStoreManager/GroceryStore.MainApp/GroceryStore.MainApp.csproj
+++ b/GroceryStoreManager/GroceryStore.MainApp/GroceryStore.MainApp.csproj
@@ -4,8 +4,6 @@
     <TargetFramework>net7.0-windows10.0.19041.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <RootNamespace>GroceryStore.MainApp</RootNamespace>
-    <ApplicationIcon>Assets/WindowIcon.ico</ApplicationIcon>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
     <Platforms>x86;x64;arm64</Platforms>
     <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
     <PublishProfile>Properties\PublishProfiles\win10-$(Platform).pubxml</PublishProfile>
@@ -13,6 +11,22 @@
 	<Nullable>enable</Nullable>
 	<UseWinUI>true</UseWinUI>
     <EnableMsixTooling>true</EnableMsixTooling>
+    <ApplicationIcon>Assets\GSMIcon.ico</ApplicationIcon>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <GenerateAppInstallerFile>True</GenerateAppInstallerFile>
+    <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
+    <PackageCertificateThumbprint>DA16E5B855876112FCD831EEAEF11A8390CDE8FE</PackageCertificateThumbprint>
+    <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
+    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
+    <GenerateTestArtifacts>True</GenerateTestArtifacts>
+    <AppxBundle>Never</AppxBundle>
+    <AppInstallerUri>\\server\\myshop</AppInstallerUri>
+    <AppxPackageDir>D:\Desktop\Dep4.5\</AppxPackageDir>
+
+	  <!--<WindowsPackageType>None</WindowsPackageType>
+	  <WindowsAppSDKSelfContained>True</WindowsAppSDKSelfContained>-->
+	  
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="_legacy\WindowPopupService.cs" />
