--- a/GroceryStoreManager/GroceryStore.MainApp/GroceryStore.MainApp.csproj
+++ b/GroceryStoreManager/GroceryStore.MainApp/GroceryStore.MainApp.csproj
@@ -13,7 +13,7 @@
     <EnableMsixTooling>true</EnableMsixTooling>
     <ApplicationIcon>Assets\GSMIcon.ico</ApplicationIcon>
     <ApplicationManifest>app.manifest</ApplicationManifest>
-    <GenerateAppInstallerFile>True</GenerateAppInstallerFile>
+    <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
     <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
     <PackageCertificateThumbprint>DA16E5B855876112FCD831EEAEF11A8390CDE8FE</PackageCertificateThumbprint>
     <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
